-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 19, 20
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8296601 | 19u-cpu | Aleksey Shipilev | P4 | Resolved | Fixed | master |
| JDK-8296525 | 19.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b04 |
| JDK-8295770 | 17.0.6 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8295771 | 11.0.18 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
```
* For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
/usr/lib/gcc-cross/s390x-linux-gnu/10/../../../../s390x-linux-gnu/bin/ld: /home/shade/trunks/jdk/build/build-all-server-optimized-s390x-linux-gnu-10/hotspot/variant-server/libjvm/objs/interp_masm_s390.o: in function `InterpreterMacroAssembler::get_monitors(RegisterImpl*)':
make/hotspot/src/hotspot/cpu/s390/interp_masm_s390.cpp:673: undefined reference to `InterpreterMacroAssembler::asm_assert_ijava_state_magic(RegisterImpl*)'
/usr/lib/gcc-cross/s390x-linux-gnu/10/../../../../s390x-linux-gnu/bin/ld: /home/shade/trunks/jdk/build/build-all-server-optimized-s390x-linux-gnu-10/hotspot/variant-server/libjvm/objs/interp_masm_s390.o: in function `InterpreterMacroAssembler::save_bcp()':
make/hotspot/src/hotspot/cpu/s390/interp_masm_s390.cpp:654: undefined reference to `InterpreterMacroAssembler::asm_assert_ijava_state_magic(RegisterImpl*)'
```
- backported by
-
JDK-8295770 S390X: Optimized builds are broken
-
- Resolved
-
-
JDK-8295771 S390X: Optimized builds are broken
-
- Resolved
-
-
JDK-8296525 S390X: Optimized builds are broken
-
- Resolved
-
-
JDK-8296601 S390X: Optimized builds are broken
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/37d3bbd6
-
Commit
openjdk/jdk17u-dev/7893f148
-
Commit
openjdk/jdk19u/0f76adec
-
Commit
openjdk/jdk/7b2e83b3
-
Review
openjdk/jdk11u-dev/1466
-
Review
openjdk/jdk17u-dev/813
-
Review
openjdk/jdk19u/58
-
Review
openjdk/jdk/10743