8295469: S390X: Optimized builds are broken

Backport-of: 7b2e83b3955c034208325ea5477afd3c5e1da41a